--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
   <title>Nome da Empresa</title>
   <head>Tamos tentando</head>
   <body>
-    É assim mesmo.
+    <p>É assim mesmp.</p>
   </body>
 </html>
