--- a/About.html
+++ b/About.html
@@ -7,11 +7,14 @@
         <div class="header">
             <h1>Empresa</h1>
         </div>
-        <ul>
-            <li><a href= "Home.html">Home</a></li>
-            <li><a href="Services.html">Serviços</a></li>
-            <li><a href="Contact.html">Contato</a></li>
-            <li style="float: right"><a class="active" href="About.html">Sobre</a></li>
-        </ul>       
+        <div class="topnav">
+            <a href= "Home.html">Home</a>
+            <a href="Services.html">Serviços</a>
+            <a href="Contact.html">Contato</a>
+            <a class="active" href="About.html">Sobre</a>
+        </div>
+        <div class="footer">
+            <p>Empresa do Brasil para Não sei ainda Ltda. 2017. Todos os direitos reservados. </p>
+        </div>
     </body>
 </htm>
