--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,8 @@
             <a href="Contact.html">Contato</a>
             <a href="About.html">Sobre</a>
         </div>
+        <div class="column">
+        </div>
         <div class="footer">
             <p>Empresa do Brasil para Não sei ainda Ltda. 2017. Todos os direitos reservados. </p>
         </div>
