--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,15 @@
             <a href="Contact.html">Contato</a>
             <a href="About.html">Sobre</a>
         </div>
-        <div class="column">
+        <div class="row">
+            <div class="leftcolumn">
+                <div class="card">
+                </div>
+            </div>
+            <div class="rightcolumn">
+                <div class="card">
+                </div>
+            </div>
         </div>
         <div class="footer">
             <p>Empresa do Brasil para Não sei ainda Ltda. 2017. Todos os direitos reservados. </p>
