Modificaçoes em geral

--- a/Home.html
+++ b/Home.html
@@ -4,27 +4,20 @@
         <link rel="stylesheet" href="Style.css">
     </head>
     <body>
-        <div class="header">
-            <h1>Empresa</h1>
-        </div>
         <div class="topnav">
+            <img id="logo" src="LogoMakr_7cI4j8.png"/>
             <a class="active" href= "Home.html">Home</a>
             <a href="Services.html">Serviços</a>
             <a href="Contact.html">Contato</a>
             <a href="About.html">Sobre</a>
         </div>
         <div class="row">
-            <div class="leftcolumn">
-                <div class="card">
-                </div>
-            </div>
-            <div class="rightcolumn">
-                <div class="card">
-                </div>
+            <div class="column">
+                <img class="img1" src="Esportes.png"/>
             </div>
         </div>
         <div class="footer">
-            <p>Empresa do Brasil para Não sei ainda Ltda. 2017. Todos os direitos reservados. </p>
+            <p>BeFlush para Não sei ainda Ltda. 2017. Todos os direitos reservados. </p>
         </div>
     </body>
 </html>
