--- a/Services.html
+++ b/Services.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="Style.css">
     </head>
     <body>
-        <div class="header">
-            <h1>Empresa</h1>
+        <div class="header">         
+            <img src="LogoMakr_7cI4j8.png" alt= "BeFlush" width=15%>
         </div>
         <div class="topnav">
             <a href= "Home.html">Home</a>
