--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>Empresa</h1>
+            <img src="LogoMakr_7cI4j8.png" alt= "BeFlush" width=15% align="center">
         </div>
         <div class="topnav">
             <a href= "Home.html">Home</a>
