--- a/Home/Sobre.html
+++ b/Home/Sobre.html
@@ -59,7 +59,7 @@
                 </div>
             </nav>
         <div class=""> 
-            <img src="Images/Esporte2.jpg" class="img-fluid " width="100%">    
+            <img src="Images/futequipe.jpg" class="img-fluid " width="100%">    
         </div>
         <div class="container">
             <nav>
