--- a/Home/home.html
+++ b/Home/home.html
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="#">Produtos</a>
                         </li>
                         <li class="nav-item ml-2">
-                            <a class="nav-link" href="#">Sobre</a>
+                            <a class="nav-link" href="Sobre.html">Sobre</a>
                         </li>
                         <li class="nav-item ml-2">
                             <a class="nav-link" href="#">Contatos</a>
